2009-03-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare version 1.0, release candidate #1.

	* All files: Update copyright notices; include year 2009.

	* x86-mingw32-build.sh.version (PACKAGE_VERSION_MAJOR): Set it to 1.
	(PACKAGE_VERSION_MINOR): Leave unchanged, set to 0.
	(PACKAGE_VERSION_PATCH): Leave as empty string.
	(SNAPSHOT): Reset to empty string.

	* x86-mingw32-build.sh.conf: Use latest available packages:
	(GCC_VERSION): Update to current stable release: 3.4.5-20060117-2.
	(BINUTILS_VERSION): Update to current stable release: 2.19.1.
	(RUNTIME_VERSION): Update to current stable release: 3.15.2.
	(W32API_VERSION): Update to current stable release: 3.13.
	(INSTALL_DIR): Make it `$HOME/mingw32' by default.

	* x86-mingw32-build.sh.hosts: Layout adjustment.
	* x86-mingw32-build.sh.mirrors: Typo; s/vaild/valid/.

2009-03-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Adapt package tarball names to new MinGW.org conventions.

	* Makefile (PACKAGE_NAME): New macro; define it, replacing...
	(PACKAGE_TAG): ...this, without `.sh' suffix, now unused; delete it.
	(SHOW_VERSION, SHOW_VERSION_CMD): Adjust to suit.
	(PACKAGE_SCRIPTS): New macro; define it.
	(DISTFILES): Use it.
	(TARBALL): Redefine it; use `PACKAGE_NAME'.
	(%-devel.tar): Obsolete target name; replace it...
	(%-dev.tar): ...with this.
	(devel-dist): Use it; create `$PACKAGE_NAME-$VERSION-dev.tar.$ZIPMODE'
	(%.tar): Obsolete target name; replace it ...
	(%-sh.tar): ...with this; use `PACKAGE_NAME'.
	(basic-dist): Use it; create `$PACKAGE_NAME-$VERSION-sh.tar.$ZIPMODE'

2009-03-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix STAGE 2 `make install' failure; (reported by Oliver Bock).

	* x86-mingw32-build.sh (INSTALL_GCC): Set it correctly for STAGE 2.

2009-03-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Locate script components in `$CURDIR' implicitly.

	* x86-mingw32-build.sh (CURDIR): Append to...